--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -11,7 +11,7 @@
     <Version>0.0.1</Version>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>disable</Nullable>
+    <Nullable>enable</Nullable>
     <LangVersion>latest</LangVersion>
     <AssemblyName>$(AssemblyName)</AssemblyName>
     <RootNamespace>Avvr.Kappusta.$(MSBuildProjectName)</RootNamespace>
