Piece of MediatR

--- a/src/Zoya.Application/Zoya.Application.csproj
+++ b/src/Zoya.Application/Zoya.Application.csproj
@@ -4,4 +4,9 @@
     <ProjectReference Include="..\Zoya.Core\Zoya.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
+  </ItemGroup>
+
 </Project>
