--- a/src/Zoya.Application/Zoya.Application.csproj
+++ b/src/Zoya.Application/Zoya.Application.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
 
+    <PackageReference Include="FluentResults" Version="3.16.0" />
+
     <PackageReference Include="Mapster" Version="7.4.0" />
 
     <PackageReference Include="MediatR" Version="12.2.0" />
