--- a/src/Zoya.Api/Properties/launchSettings.json
+++ b/src/Zoya.Api/Properties/launchSettings.json
@@ -1,15 +1,5 @@
 {
   "profiles": {
-    "http": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5183"
-    },
     "https": {
       "commandName": "Project",
       "launchBrowser": true,
@@ -18,7 +8,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7018;http://localhost:5183"
+      "applicationUrl": "https://localhost:7018"
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -45,7 +35,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:32256",
+      "applicationUrl": "https://localhost:32256",
       "sslPort": 44366
     }
   }
