--- a/src/Zoya.Web.Admin/Properties/launchSettings.json
+++ b/src/Zoya.Web.Admin/Properties/launchSettings.json
@@ -7,7 +7,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7035;http://localhost:5019"
+      "applicationUrl": "https://localhost:7035"
     },
     "IIS Express": {
       "commandName": "IISExpress",
