Dummy tests and the common project

--- a/src/Zoya.Application/Zoya.Application.csproj
+++ b/src/Zoya.Application/Zoya.Application.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\Zoya.Core\Zoya.Core.csproj" />
+    <ProjectReference Include="..\Zoya.Domain\Zoya.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
