--- a/src/Zoya.Api/Zoya.Api.csproj
+++ b/src/Zoya.Api/Zoya.Api.csproj
@@ -19,7 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Zoya.Application\Zoya.Application.csproj" />
-    <ProjectReference Include="..\Zoya.Core\Zoya.Core.csproj" />
+    <ProjectReference Include="..\Zoya.Domain\Zoya.Domain.csproj" />
     <ProjectReference Include="..\Zoya.Infrastructure.Persistence\Zoya.Infrastructure.Persistence.csproj" />
   </ItemGroup>
 
