--- a/src/Zoya.Api/Zoya.Api.csproj
+++ b/src/Zoya.Api/Zoya.Api.csproj
@@ -7,11 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Asp.Versioning.Http" Version="8.1.0"/>
-    <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.1.0"/>
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.10"/>
-    <PackageReference Include="Serilog.AspNetCore" Version="8.0.3"/>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.9.0"/>
+    <PackageReference Include="Asp.Versioning.Http"/>
+    <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer"/>
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi"/>
+    <PackageReference Include="Serilog.AspNetCore"/>
+    <PackageReference Include="Swashbuckle.AspNetCore"/>
   </ItemGroup>
 
   <ItemGroup>
