--- a/src/Zoya.Application/Zoya.Application.csproj
+++ b/src/Zoya.Application/Zoya.Application.csproj
@@ -5,10 +5,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentResults" Version="3.16.0"/>
-    <PackageReference Include="Mapster" Version="7.4.0"/>
-    <PackageReference Include="MediatR" Version="12.4.1"/>
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.2"/>
+    <PackageReference Include="FluentResults"/>
+    <PackageReference Include="Mapster"/>
+    <PackageReference Include="MediatR"/>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions"/>
   </ItemGroup>
 
 </Project>
