--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -3,16 +3,17 @@
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
   </PropertyGroup>
   <ItemGroup>
-    <PackageVersion Include="TUnit" Version="0.19.64" />
-    <PackageVersion Include="Asp.Versioning.Http" Version="8.1.0" />
-    <PackageVersion Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.1.0" />
-    <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="9.0.4" />
-    <PackageVersion Include="Serilog.AspNetCore" Version="9.0.0" />
-    <PackageVersion Include="Swashbuckle.AspNetCore" Version="8.1.1" />
-    <PackageVersion Include="FluentResults" Version="3.16.0" />
-    <PackageVersion Include="Mapster" Version="7.4.0" />
-    <PackageVersion Include="MediatR" Version="12.5.0" />
-    <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.4" />
-      <PackageVersion Include="Aspire.Hosting.AppHost" Version="9.2.0"/>
+    <PackageVersion Include="TUnit" Version="0.25.21"/>
+    <PackageVersion Include="Asp.Versioning.Http" Version="8.1.0"/>
+    <PackageVersion Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.1.0"/>
+    <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="9.0.6"/>
+    <PackageVersion Include="Serilog.AspNetCore" Version="9.0.0"/>
+    <PackageVersion Include="Swashbuckle.AspNetCore" Version="9.0.1"/>
+    <PackageVersion Include="FluentResults" Version="4.0.0"/>
+    <PackageVersion Include="Mapster" Version="7.4.0"/>
+    <PackageVersion Include="MediatR" Version="12.5.0"/>
+    <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.6"/>
+    <PackageVersion Include="Aspire.Hosting.AppHost" Version="9.3.1"/>
+    <PackageVersion Include="SonarAnalyzer.CSharp" Version="10.12.0.118525"/>
   </ItemGroup>
 </Project>
