--- a/src/Zoya.Api/Zoya.Api.csproj
+++ b/src/Zoya.Api/Zoya.Api.csproj
@@ -12,6 +12,10 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi"/>
     <PackageReference Include="Serilog.AspNetCore"/>
     <PackageReference Include="Swashbuckle.AspNetCore"/>
+    <PackageReference Update="SonarAnalyzer.CSharp">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
