--- a/src/Zoya.Application/Zoya.Application.csproj
+++ b/src/Zoya.Application/Zoya.Application.csproj
@@ -9,6 +9,10 @@
     <PackageReference Include="Mapster"/>
     <PackageReference Include="MediatR"/>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions"/>
+    <PackageReference Update="SonarAnalyzer.CSharp">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
