--- a/src/Zoya.Infrastructure.Persistence/Zoya.Infrastructure.Persistence.csproj
+++ b/src/Zoya.Infrastructure.Persistence/Zoya.Infrastructure.Persistence.csproj
@@ -4,4 +4,11 @@
     <ProjectReference Include="..\Zoya.Application\Zoya.Application.csproj"/>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="SonarAnalyzer.CSharp">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
