--- a/tests/Zoya.Application.Tests.Unit/Zoya.Application.Tests.Unit.csproj
+++ b/tests/Zoya.Application.Tests.Unit/Zoya.Application.Tests.Unit.csproj
@@ -7,6 +7,10 @@
 
   <ItemGroup>
     <PackageReference Include="TUnit"/>
+    <PackageReference Update="SonarAnalyzer.CSharp">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
