--- a/src/Kappusta.Host/Kappusta.Host.csproj
+++ b/src/Kappusta.Host/Kappusta.Host.csproj
@@ -10,6 +10,10 @@
 
   <ItemGroup>
     <PackageReference Include="Aspire.Hosting.AppHost"/>
+    <PackageReference Update="SonarAnalyzer.CSharp">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
