--- a/src/Zoya.Web.Admin/Zoya.Web.Admin.csproj
+++ b/src/Zoya.Web.Admin/Zoya.Web.Admin.csproj
@@ -8,6 +8,10 @@
 
   <ItemGroup>
     <PackageReference Include="Serilog.AspNetCore"/>
+    <PackageReference Update="SonarAnalyzer.CSharp">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
