--- a/src/Zoya.Api/Zoya.Api.csproj
+++ b/src/Zoya.Api/Zoya.Api.csproj
@@ -10,8 +10,8 @@
     <PackageReference Include="Asp.Versioning.Http"/>
     <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer"/>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi"/>
+    <PackageReference Include="Scalar.AspNetCore" />
     <PackageReference Include="Serilog.AspNetCore"/>
-    <PackageReference Include="Swashbuckle.AspNetCore"/>
     <PackageReference Update="SonarAnalyzer.CSharp">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
