--- a/src/Zoya.Web.Admin/Dockerfile
+++ b/src/Zoya.Web.Admin/Dockerfile
@@ -6,17 +6,20 @@ EXPOSE 443
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["src/Zoya.Web.Admin/Zoya.Web.Admin.csproj", "src/Zoya.Web.Admin/"]
-RUN dotnet restore "./src/Zoya.Web.Admin/Zoya.Web.Admin.csproj"
-COPY . .
-WORKDIR "/src/Zoya.Web.Admin"
-RUN dotnet build "./Zoya.Web.Admin.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR /src
+# Copy the whole repository into the build context so project-to-project references
+# are available during dotnet restore.
+COPY . /src
+WORKDIR /src
+# Use repo-relative path to the project file
+RUN dotnet restore "src/Zoya.Web.Admin/Zoya.Web.Admin.csproj"
+RUN dotnet build "src/Zoya.Web.Admin/Zoya.Web.Admin.csproj" -c $BUILD_CONFIGURATION -o /app/build /p:GenerateDocumentationFile=true
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./Zoya.Web.Admin.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "src/Zoya.Web.Admin/Zoya.Web.Admin.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false /p:GenerateDocumentationFile=true
 
-FROM base AS finaldo
+FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "Zoya.Web.Admin.dll"]
